--- a/form.html
+++ b/form.html
@@ -26,11 +26,12 @@
 
 <section>
     <h2>Form</h2>
+
+    <!-- Form using empty action -->
     <form action="./#" method="post">
         <p></p>
-            <label for="blogAuthor">Author<br>
-                <input type="text" name="blogAuthor" id="blogAuthor" placeholder="Enter author" maxlength="125">
-            </label>
+            <label for="blogAuthor">Author</label><br>
+            <input type="text" name="blogAuthor" id="blogAuthor" placeholder="Enter author" maxlength="125">
         </p>
         <p>
             <label for="blogTitle">Page title:<br>
